# gengproto

./: .gitignore  CMakeLists.txt  README.md  main.cpp
docs/: vscode_win.md
src/: CMakeLists.txt  Coordinate.h  Entity.cpp  Entity.h  Game.cpp  Game.h  SDLManager.cpp  SDLManager.h  main.cpp
src/core/: CMakeLists.txt  Coordinate.h  Drawable.h  EventManager.cpp  EventManager.h  GraphicsManager.cpp  GraphicsManager.h  KeyCode.cpp  KeyEventType.h  RandomGenerator.cpp  RandomGenerator.h
src/core/colors/: CMakeLists.txt  Colors.cpp  Colors.h
src/core/error/: Errors.h
src/core/shapes/: CMakeLists.txt  GRectangle.cpp  GRectangle.h
src/sdl/: CMakeLists.txt  SDLManager.cpp  SDLManager.h
src/shapes/: CMakeLists.txt  GRectangle.cpp  GRectangle.h
src/tetris/: CMakeLists.txt  Controls.h  Grid.cpp  Grid.h  Piece.cpp  Piece.h  PieceTemplates.cpp  PieceTemplates.h  Tetris.cpp  Tetris.h
